tests/negative/parse-error.hs
-- EXPECT-ERROR: parse error on input ‘=’
import ReWire
f = = 5
main = undefined
